<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.boundarydevices.platformtesting.TestTouchscreen">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/build_id"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:gravity="center_horizontal"
        android:text="@string/touch_test"
        android:textSize="12pt" />

    <Button
        android:id="@+id/button_touch_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_1"
        android:layout_below="@id/text"
        android:layout_margin="30dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_touch_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_2"
        android:layout_below="@id/button_touch_1"
        android:layout_margin="30dp"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/button_touch_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_3"
        android:layout_below="@id/button_touch_1"
        android:layout_margin="30dp"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/button_touch_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_4"
        android:layout_below="@id/button_touch_3"
        android:layout_margin="30dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_touch_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:layout_below="@id/button_touch_1"
        android:layout_margin="30dp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
