<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.boundarydevices.platformtesting.TouchConfiguration">

    <TextView
        android:id="@+id/touch_conf_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_fw_text"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:gravity="center"
        android:textSize="12pt" />

    <EditText
        android:id="@+id/touch_conf_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_fw_default"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/touch_conf_text"
        android:layout_margin="30dp"
        android:gravity="center"
        android:textSize="12pt" />

    <Button
        android:id="@+id/touch_conf_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_below="@id/touch_conf_edittext"
        android:layout_margin="30dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/touch_conf_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:layout_below="@id/touch_conf_start"
        android:layout_margin="30dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
