<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.boundarydevices.platformtesting.TestUSB">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usb_progress"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/usb_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/usb_progress"
        android:layout_margin="30dp"
        android:gravity="center"
        android:textSize="12pt" />

    <Button
        android:id="@+id/button_usb_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:layout_below="@id/usb_text"
        android:layout_margin="30dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_usb_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:layout_below="@id/usb_text"
        android:layout_margin="30dp"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/button_usb_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:layout_below="@id/usb_text"
        android:layout_margin="30dp"
        android:layout_alignParentRight="true" />
</RelativeLayout>
